is-h2/is/kube/is-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: is-service
spec:
  selector:
    deploymentconfig: is-deployment
  ports:
  -
    name: servlet-http
    protocol: TCP
    port: 9763
  -
    name: servlet-https
    protocol: TCP
    port: 9443
