is-h2/is/kube/is-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: wso2
  name: is-route
spec:
  host: localhost
  port:
    targetPort: servlet-https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: is-service
